# showing

./: .gitignore
backend/: .env  .gitignore  Cargo.toml  pyproject.toml
backend/src/: db.rs  main.py  main.rs
frontend/: .gitignore  .prettierrc  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  app.html  index.tsx
frontend/src/pages/: Home.tsx  NotFound.tsx
frontend/src/routes/: +page.svelte
