[package]
name = "showing"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.44.2", features = ["full"] }
